# tensorflow

./: .bazelrc  .bazelversion  .gitignore  BZLMOD.md  MODULE.bazel  WORKSPACE.bzlmod
tensorflow/: extensions.bzl
tensorflow/tools/ci_build/install/: install_bazel.sh
tensorflow/tools/ci_build/release/: common.sh
